# poem-sse-chat-app

./: .dockerignore  .editorconfig  Cargo.toml  Dockerfile  LICENSE
client/: package-lock.json  package.json  tsconfig.json  vite.config.ts
client/app/: api-schema.d.ts  root.tsx
client/app/components/: header.tsx  join-room-form.tsx  login-form.tsx  room-links.tsx
client/app/lib/: rooms.ts  use-event-source.ts  use-live-loader.ts
client/app/routes/: _index.tsx  dashboard.tsx  rooms.$room.messages.tsx  rooms.$room.tsx  rooms._index.tsx  rooms.tsx
src/: auth.rs  clock.rs  events.rs  main.rs
ui/: .prettierrc  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
ui/src/: app.tsx  main.tsx  root.tsx  router.ts
ui/src/api/: api-schema.d.ts  client.ts
ui/src/components/: chat-form.tsx  create-room-button.tsx  error-boundary.tsx  join-room-form.tsx  login-form.tsx  room-link.tsx  room-links.tsx
ui/src/components/ui/: button.tsx  command.tsx  dialog.tsx  label.tsx  toggle-group.tsx
ui/src/lib/: idb.ts  rooms.ts  session.ts  use-event-source.ts  use-live-loader.ts  use-loader-data.ts
ui/src/lib/api/: api-schema.d.ts  api-schema.json  client.ts
ui/src/routes/: _index.tsx  rooms.$room.messages.tsx  rooms.$room.tsx  rooms._index.tsx  rooms.tsx
ui/src/routes/rooms/: index.tsx  layout.tsx  messages.tsx  room.tsx  users.tsx
ui/tests/: base-test.ts  chat.spec.ts  openapi.spec.ts
ui/tests/open-api/: open-api.ts  types.ts
