[package]
name = "poem-sse-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "2.0.0", features = ["test", "sse"] }
poem-openapi = { version = "4.0.0", features = ["swagger-ui", "email", "uuid", "websocket", "time"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = {version = "0.3.9", features = ["env-filter"] }
serde = "1.0.199"
time = { version = "0.3.36", features = ["std"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
serde_json = "1.0.116"
async-stream = "0.3.5"
futures-util = "0.3.30"
